# Yuta_Chat_Bot

./: .gitignore  README.md  main.py  pyproject.toml  test_request.json  transformer_request.json
data/: sec_company_tickers_exchange.json
data_tool/: sec_aliases_maker.py  sec_origin.py
src/: _promptTemplate  controller.py  create_dataset.py  langchain_client.py  rag_controller.py  rag_evaluate.py  rag_router.py  router.py  sec_aliases_maker.py  sec_client.py
