[project]
name = "ycb-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=26.1.2",
    "python-dotenv>=1.2.2",
    "langgraph>=1.2.7",
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "langchain-google-genai>=4.2.6",
    "langchain-codex-oauth>=1.0.0",
    "langchain-chroma>=1.1.0",
]
